RESOLVED FIXED279268
[CSS Typed OM] Fix reference cycle between the computed style property map and DOM elements
https://bugs.webkit.org/show_bug.cgi?id=279268
Summary [CSS Typed OM] Fix reference cycle between the computed style property map an...
Ryan Reno
Reported 2024-09-06 09:28:26 PDT
discovered via run-webkit-tests --world-leaks imported/w3c/web-platform-tests/css/css-typed-om
Attachments
Ryan Reno
Comment 1 2024-09-06 09:28:27 PDT
Ryan Reno
Comment 2 2024-09-06 09:31:31 PDT
EWS
Comment 3 2024-09-11 10:22:27 PDT
Committed 283490@main (002bcd5e7215): <https://commits.webkit.org/283490@main> Reviewed commits have been landed. Closing PR #33246 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.